fix contrast on performance score indicators

--- a/src/scss/speedlify-score.scss
+++ b/src/scss/speedlify-score.scss
@@ -15,6 +15,7 @@ speedlify-score {
 	border-radius: 50%;
 	border: 2px solid #0cce6b;
 	color: #088645;
+  background-color: white;
 	margin-left: 0.4615384615385em; /* 6px /13 */
 }
 .speedlify-score-ok {
